--- a/딥러닝/my_RAG copy.ipynb
+++ b/딥러닝/my_RAG copy.ipynb
@@ -387,10 +387,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "ae8acf02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_18664\\3944120648.py:7: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embedding_model = HuggingFaceEmbeddings(\n"
+     ]
+    }
+   ],
    "source": [
     "# embedding_model = HuggingFaceEmbeddings(\n",
     "#     model_name='BAAI/bge-m3',\n",
@@ -414,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c2fc8f37",
    "metadata": {},
    "outputs": [],
@@ -430,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "71caadfd",
    "metadata": {},
    "outputs": [],
@@ -453,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "64c869a3",
    "metadata": {},
    "outputs": [],
@@ -478,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "ea8afd3e",
    "metadata": {},
    "outputs": [],
@@ -487,8 +496,8 @@
     "\n",
     "# llm = OllamaLLM(model=\"llama3.1:latest\")\n",
     "# llm = OllamaLLM(model=\"qwen3:latest\")\n",
-    "llm = OllamaLLM(model=\"qwen3:4b\")\n",
-    "# llm = ChatOpenAI(model_name = \"gpt-4o-mini\", temperature=0)\n",
+    "# llm = OllamaLLM(model=\"qwen3:4b\")\n",
+    "llm = ChatOpenAI(model_name = \"gpt-4o-mini\", temperature=0)\n",
     "\n",
     "def format_docs(docs):\n",
     "    return '\\n\\n'.join(doc.page_content for doc in docs)\n",
@@ -519,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "83e1df72",
    "metadata": {},
    "outputs": [
@@ -528,29 +537,126 @@
      "output_type": "stream",
      "text": [
       "<think>\n",
-      "Okay, let's try to figure out how much the professor can get for accommodation costs when they went on a 4-day business trip to the US.\n",
+      "Okay, let's try to figure out how much the professor can get for lodging expenses when they go to the US for a 4-day business trip. \n",
       "\n",
-      "First, I need to check the relevant information from the provided tables. The question is about the accommodation cost for a professor traveling to the US. Looking at the \"체 재 비\" (accommodation cost) section, there's a table that categorizes costs based on the region. The \"가\" region includes the US, as per the list: \"가 : 스위스,이스라엘, 아이슬 란드,노르웨이, 덴마크, 아일랜드,오스트레일리아, 뉴질랜드,룩셈부르크,스웨 덴, 영국, 핀란드, 캐나다, 미국, 네덜란드,벨기에, 일본, 오스트리아, 프랑스, 독일,이탈리아, 홍콩,싱가포르, 러시아(모스크바),중국(베이징, 상하이,선전,광저우)\". So the US is under the \"가\" category.\n",
+      "First, I need to check the given information. The user provided some tables and details about domestic and international travel expenses. Let me look at the international part first.\n",
       "\n",
-      "Looking at the \"체 재 비\" table, for the \"가\" region, the accommodation cost per night is $220. However, there's also a note about the duration of stay. The first table mentions that if someone stays in the same place for a long time, the costs are reduced. But the question is about a 4-day trip. Wait, but the question is about the total accommodation cost. However, the problem is that the tables might be structured differently. Let me check again.\n",
+      "In the table under \"체 재 비\" (which I think translates to \"Accommodation expenses\"), there's a section for \"가\" (which is \"A\") and \"나\" (which is \"B\"). For \"가\" (A), the lodging cost is $220 per day and $160 for the night. But wait, the professor is going to the US, which is listed under \"가\" (A) in the table. So the US is in the \"가\" category. \n",
       "\n",
-      "Wait, the \"체 재 비\" table under \"가\" has the accommodation cost as $220 per day. However, the note says that if staying in the same place for a long time, the costs are reduced. But the question is about a 4-day trip. However, the problem is that the tables might not specify whether the $220 is per day or per night. But in the \"체 재 비\" table, the \"일 비\" is (1일당) which is per day. So if the professor stayed 4 days, the total accommodation cost would be 4 days multiplied by $220. But wait, wait, the problem is that the \"가\" region's accommodation cost is $220 per day. But the professor is in the US, which is under \"가\" region. So the total would be 4 days * $220 = $880. But wait, the question is about the total accommodation cost. However, I need to check if there's any other information that might affect this.\n",
+      "Wait, the table shows for \"가\" (A): 항공임 2등 운임 실비, which is \"airfare 2nd class, actual cost\", and the lodging is $35 per day and $220 per night. Wait, maybe I need to check the exact numbers again. The table says for \"가\" (A), the lodging is $35 (daily) and $220 (nightly). But the professor is staying for 4 days. Wait, but the question is about lodging expenses. \n",
       "\n",
-      "Wait, looking at the \"공무형편상 부득이한 사유\" (unforeseen circumstances for official business), but the professor's trip is for 4 days, so maybe that's not applicable here. Also, the \"나\" region is for other regions, but the US is in \"가\". So the accommodation cost per day is $220. Therefore, 4 days would be 4 * $220 = $880. However, I need to check the other tables to confirm. \n",
+      "Wait, the problem is that the table might be a bit confusing. Let me check again. The table under \"체 재 비\" (Accommodation expenses) has for \"가\" (A): \n",
       "\n",
-      "Looking at the \"국내여비\" (domestic expense) table, for the \"가\" region, the accommodation cost is $220 per day. So that's consistent. Therefore, the total accommodation cost for 4 days would be $220 * 4 = $880. But wait, the problem is that the \"체 재 비\" table under \"가\" region has the accommodation cost as $220 per day. But the professor is in the US, which is in the \"가\" category. So the answer should be $880. However, I need to check if there's any other factor. \n",
+      "- 체 재 비 (Accommodation) for \"가\" (A) is $35 (daily) and $220 (nightly). But the professor is going to the US for 4 days. Wait, but how does the duration affect the calculation? \n",
       "\n",
-      "Wait, the \"체 재 비\" table also has a note that if staying in the same place for a long time, the cost is reduced. But the question is about a 4-day trip. The note says \"같은 곳에 장기간 체재하는 경우의 일비 및 숙박비는 [---중략---] 감하여 지급한다.\" But since the trip is only 4 days, maybe that doesn't apply here. Therefore, the total accommodation cost would be 4 days * $220 = $880. \n",
+      "Wait, the professor is going to the US for a 4-day trip. So, the duration is 4 days. But in the table, the \"체 재 비\" for \"가\" is $35 per day and $220 per night. But the question is about the total lodging cost. \n",
       "\n",
-      "But wait, let me check the answer again. The answer might be different. Let me check the \"체 재 비\" table again. The \"가\" region has the accommodation cost as $220 per day. So 4 days would be 4 * 220 = 880. So the answer should be $880. But maybe the problem is that the professor is in the US, which is in the \"가\" region, so the answer is correct. However, I need to check if the \"체 재 비\" is per day or per night. The (1일당) is per day, so that's correct. Therefore, the answer is $880.\n",
+      "Wait, maybe the $220 is the cost for the night, so each night is $220. But if the professor is staying for 4 days, that would be 4 nights? Or is it 4 days including the return day? \n",
+      "\n",
+      "Wait, in business trips, usually, the number of days is the number of days stayed. So if they go for 4 days, they would stay for 4 nights. Wait, but that depends on the departure and return dates. But the problem states that the professor went on a 4-day business trip. So, assuming that they stay for 4 nights, the total lodging cost would be 4 times $220. But wait, the table says for \"가\" (A), the lodging is $35 per day and $220 per night. Wait, that seems conflicting. Maybe the $35 is the daily rate, and $220 is for the night. But that's confusing. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the daily rate, and the $220 is the total for the stay. But that doesn't make sense. Wait, looking at the table again:\n",
+      "\n",
+      "In the \"체 재 비\" table, under \"가\" (A), the columns are:\n",
+      "\n",
+      "- (1일당) (daily) = $35\n",
+      "\n",
+      "- (1야당) (nightly) = $220\n",
+      "\n",
+      "So that would mean that per day, the cost is $35, and per night, it's $220. But that's a bit confusing. However, in reality, the lodging cost is usually per night. So maybe the $220 is the per night cost, and the $35 is the daily rate. But that would be inconsistent. Alternatively, maybe the table is structured such that the daily rate is $35, and the per night is $220. But that's not possible because each day would have a night. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the daily rate, and the $220 is the total for the stay. But that's not clear. However, looking at the other rows, for example, under \"나\" (B), the lodging is $160 per night. So maybe the $220 and $160 are the per night costs. \n",
+      "\n",
+      "Wait, the table under \"체 재 비\" has the following:\n",
+      "\n",
+      "For \"가\" (A), the lodging is $35 (daily) and $220 (nightly). But that seems conflicting. However, the other entries under \"가\" (A) are for the same category. Let me check the other parts of the table.\n",
+      "\n",
+      "Looking at the \"국내여비 지급기준\" (domestic expense standards), there's a table for domestic transportation and lodging. For example, for \"교 수\" (professor), the domestic transportation is KTX 2nd class, and the lodging is ￦30,000 per day and ￦100,000 per night. Wait, that's in Korean won. But the question is about the US, which is international. \n",
+      "\n",
+      "So, in the international part, the \"가\" (A) category includes the US. So for the US, the lodging cost is $35 per day and $220 per night. But that seems conflicting. However, maybe the $35 is the daily rate, and the $220 is for the night. But that doesn't make sense. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the daily rate, and the $220 is the total for the stay. But that would be for 4 days, 4 * 35 = 140, but that's not matching with the $220. \n",
+      "\n",
+      "Alternatively, maybe the $220 is the per night cost. So if the professor is staying for 4 nights, the total would be 4 * 220 = 880. But then why is there a $35 per day? \n",
+      "\n",
+      "Wait, maybe the table is structured such that \"체 재 비\" is divided into daily and nightly rates. But that's not standard. Usually, lodging is per night. So perhaps the $35 is the daily rate, and the $220 is the per night rate. But that would be inconsistent. \n",
+      "\n",
+      "Alternatively, perhaps the $35 is the daily rate, and the $220 is for the total stay. But that's not clear. \n",
+      "\n",
+      "Alternatively, maybe the $220 is the per night cost, and the professor is staying for 4 nights, so 4 * 220 = 880. But then why is there a $35 per day? \n",
+      "\n",
+      "Wait, looking at the other entries, for \"나\" (B) category, the lodging is $160 per night. So that's per night. So for the \"가\" (A) category, the per night cost is $220. Therefore, if the professor is staying for 4 days, that's 4 nights, so 4 * 220 = 880. \n",
+      "\n",
+      "But then why is there a $35 per day? Maybe that's a different category. Wait, maybe the $35 is for the daily transportation cost. Wait, no, in the table, the \"체 재 비\" (accommodation) is under the \"체 재 비\" section. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the daily rate, and the $220 is for the total stay. But that's not clear. \n",
+      "\n",
+      "Alternatively, maybe the table is structured with the daily rate and the nightly rate. But that's not standard. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the per day cost, and the $220 is for the night. So, if the professor is staying for 4 days, that would be 4 days, but how many nights? If they arrive on day 1, they would stay for 4 nights. So 4 * 220 = 880. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the per day rate, so 4 days would be 4 * 35 = 140. But that seems low. \n",
+      "\n",
+      "But the problem is that the user provided two different tables. One is for domestic expenses and the other for international. The international table for \"가\" (A) has lodging cost of $35 (daily) and $220 (nightly). But that seems conflicting. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the daily rate, and the $220 is the total for the stay. But that's not clear. \n",
+      "\n",
+      "Wait, in the \"국내여비 지급기준\" (domestic expense standards) table, for the professor, the lodging is ￦30,000 per day and ￦100,000 per night. So that's per day and per night. But that seems like a mistake. Because normally, the per day rate is the same as the per night rate. But maybe that's the case. \n",
+      "\n",
+      "But in the international table, for \"가\" (A), the lodging is $35 per day and $220 per night. So that's different. \n",
+      "\n",
+      "But the question is about the US, which is in the \"가\" (A) category. So the lodging cost for the US is $35 per day and $220 per night. \n",
+      "\n",
+      "But if the professor is staying for 4 days, then they would need to calculate the total lodging cost. \n",
+      "\n",
+      "But how many nights are they staying? If they go on a 4-day trip, they might be staying for 4 nights. So 4 * $220 = $880. \n",
+      "\n",
+      "But the problem is that the table might be structured with daily and nightly rates, but that's not standard. However, given the information, we have to go with what's provided. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the per day rate, so for 4 days, it's 4 * 35 = 140. But that seems too low. \n",
+      "\n",
+      "Wait, but looking at the other entries in the international table, for \"나\" (B), the lodging is $160 per night. So that's per night. Therefore, for \"가\" (A), the $220 is per night. Therefore, the professor staying for 4 days would have 4 nights, so 4 * 220 = 880. \n",
+      "\n",
+      "But why is there a $35 per day? Maybe that's a different category. Maybe the $35 is for the daily transportation cost, but that's not in the \"체 재 비\" section. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the daily rate, and the $220 is for the total stay. But that's not clear. \n",
+      "\n",
+      "Alternatively, perhaps the table is structured with the daily rate and the total for the stay. But that's not standard. \n",
+      "\n",
+      "Given that the international table for \"가\" (A) has the lodging cost as $35 per day and $220 per night, and the problem is about a 4-day trip, I think the correct approach is to calculate based on the number of nights. \n",
+      "\n",
+      "Assuming that the professor is staying for 4 days, that would be 4 nights. Therefore, the total lodging cost would be 4 * $220 = $880. \n",
+      "\n",
+      "But I need to make sure. Alternatively, maybe the $35 is the daily rate, so 4 days would be 4 * 35 = 140. But that seems low. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the per night rate, and the $220 is the total for the stay. But that's not possible. \n",
+      "\n",
+      "Alternatively, maybe the $35 is the per day rate, and the $220 is the total for the stay. But that would be for 4 days, which would be 220. \n",
+      "\n",
+      "But that's not logical. \n",
+      "\n",
+      "Wait, looking at the other entries in the international table, for \"가\" (A), the transportation cost is \"항공임 2등 운임 실비\" (airfare 2nd class, actual cost), but the lodging is $35 per day and $220 per night. \n",
+      "\n",
+      "But given the confusion, maybe the answer is based on the per night cost. Since the professor is in the US, and the per night cost is $220, and they stay for 4 nights, the total is 4 * 220 = $880. \n",
+      "\n",
+      "Therefore, the answer is $880.\n",
       "</think>\n",
       "\n",
-      "교수가 미국으로 4일 출장을 다녀왔을 때 받을 수 있는 총 숙박비는 **$880**입니다.  \n",
+      "The professor's lodging expenses for a 4-day business trip to the United States are calculated as follows:\n",
       "\n",
-      "**설명:**  \n",
-      "- 미국은 \"가\" 지역에 해당하며, 해당 지역의 숙박비는 **$220/일**입니다.  \n",
-      "- 4일간의 출장으로 인해 총 숙박비는 $220 × 4 = **$880**입니다.  \n",
-      "- \"장기간 체재하는 경우\"에 대한 감면 규정은 4일의 짧은 출장에 해당하지 않으므로 적용되지 않습니다.\n"
+      "1. **Determine the applicable lodging rate**:  \n",
+      "   The U.S. is categorized under \"가\" (A) in the international accommodation expense table. For this category, the lodging cost is **$220 per night**.\n",
+      "\n",
+      "2. **Calculate the number of nights**:  \n",
+      "   A 4-day trip typically involves staying for **4 nights** (assuming arrival on Day 1 and departure on Day 4).\n",
+      "\n",
+      "3. **Compute the total lodging cost**:  \n",
+      "   $$\n",
+      "   \\text{Total Lodging Cost} = \\text{Number of Nights} \\times \\text{Per-Night Rate} = 4 \\times 220 = 880\n",
+      "   $$\n",
+      "\n",
+      "**Answer**:  \n",
+      "The professor can claim **$880** for lodging expenses.\n"
      ]
     }
    ],
@@ -562,7 +668,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "id": "609d6416",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "해당 문헌에서 교수 부참여(3급)의 경우, 미국은 \"가\"지역에 속하고 있습니다. 따라서 교수 부참여(3급) 이 상, 재.체 일 비 (1일당) 숙박비 (1야당)는 $35 $220입니다.\n",
+      "\n",
+      "더욱이, 해당 문헌에서 \"나\"지역의 경우 공무의 형편이나 그 밖의 부득이한 사유로 상한액을 초과하여 숙박비를 지출하였을 때에는 \"가\"지역의 한도내에서 추가로 지급할 수 있다는 것을 확인할 수 있습니다. 따라서 교수는 미국에 대해 \"가\"지역의 한도를 적용받을 수 있는지 여부에 따라 다르게 처리될 수 있습니다.\n",
+      "\n",
+      "따라서, 교수가 미국으로 4일 출장을 다녀왔을 때 받을 수 있는 총 숙박비는 $220 x 4 = $880입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"교수가 미국으로 4일 출장을 다녀왔을 때 받을 수 있는 총 숙박비는?\"\n",
+    "result = rag_chain.invoke(question)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "615425f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "교수가 미국으로 4일 출장을 다녀왔을 때 받을 수 있는 총 숙박비는 다음과 같습니다.\n",
+      "\n",
+      "- 숙박비 (1야당): $220\n",
+      "- 총 숙박비: $220 × 4일 = $880\n",
+      "\n",
+      "따라서, 총 숙박비는 $880입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"교수가 미국으로 4일 출장을 다녀왔을 때 받을 수 있는 총 숙박비는?\"\n",
+    "result = rag_chain.invoke(question)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "cdb23566",
    "metadata": {},
    "outputs": [],
@@ -602,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "d4efe79e",
    "metadata": {},
    "outputs": [],
