--- a/deeplearning/RAG/rag_mcp.ipynb
+++ b/deeplearning/RAG/rag_mcp.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from 딥러닝.RAG.my_rag import RAGRetriever, RAGGenerator"
+    "from RAG.my_rag import RAGRetriever, RAGGenerator"
    ]
   },
   {
