--- a/deeplearning/RAG/my_RAG copy 2.ipynb
+++ b/deeplearning/RAG/my_RAG copy 2.ipynb
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "device(type='mps')"
+       "device(type='cpu')"
       ]
      },
      "execution_count": 2,
@@ -401,7 +401,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myRAG",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
