--- a/deeplearning/RAG/program.ipynb
+++ b/deeplearning/RAG/program.ipynb
@@ -18,7 +18,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6479cd58",
+   "id": "84db7a3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install langchain_huggingface"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef669005",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -51,7 +61,8 @@
     "import sys\n",
     "import requests\n",
     "from PyQt6.QtWidgets import (\n",
-    "    QApplication, QWidget, QVBoxLayout, QPushButton, QLabel, QFileDialog\n",
+    "    QApplication, QWidget, QVBoxLayout, QHBoxLayout, QPushButton, QLabel, \n",
+    "    QFileDialog, QLineEdit, QTextEdit, QFrame\n",
     ")\n",
     "from PyQt6.QtCore import Qt\n",
     "\n",
@@ -67,95 +78,165 @@
     "                border: 2px dashed #aaa;\n",
     "                padding: 20px;\n",
     "                font-size: 14px;\n",
+    "                background-color: #f9f9f9;\n",
     "            }\n",
     "        \"\"\")\n",
     "\n",
     "    def dragEnterEvent(self, event):\n",
-    "        # 드래그된 데이터에 URL(파일 경로)이 포함되어 있는지 확인\n",
     "        if event.mimeData().hasUrls():\n",
     "            event.acceptProposedAction()\n",
     "        else:\n",
     "            event.ignore()\n",
     "\n",
     "    def dropEvent(self, event):\n",
-    "        # 드롭된 파일의 경로를 가져옴\n",
     "        for url in event.mimeData().urls():\n",
     "            file_path = url.toLocalFile()\n",
-    "            # PDF 파일만 처리\n",
     "            if file_path.lower().endswith('.pdf'):\n",
     "                print(f\"드롭된 파일: {file_path}\")\n",
     "                self.parent().upload_file(file_path)\n",
     "                return\n",
     "        print(\"PDF 파일이 아닙니다.\")\n",
     "\n",
-    "\n",
-    "class PDFUploader(QWidget):\n",
+    "class RAGClientApp(QWidget):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.init_ui()\n",
     "        # Flask 서버 주소\n",
-    "        self.server_url = \"http://127.0.0.1:5000/upload\"\n",
+    "        self.upload_url = \"http://127.0.0.1:5000/upload\"\n",
+    "        self.ask_url = \"http://127.0.0.1:5000/ask\"\n",
+    "        self.init_ui()\n",
     "\n",
     "    def init_ui(self):\n",
-    "        layout = QVBoxLayout()\n",
+    "        \"\"\"애플리케이션의 전체 UI를 설정합니다.\"\"\"\n",
+    "        main_layout = QVBoxLayout()\n",
     "\n",
-    "        # 드래그 앤 드롭 라벨\n",
+    "        # --- 1. 파일 업로드 섹션 ---\n",
+    "        upload_group_label = QLabel(\"1. PDF 파일 업로드\")\n",
+    "        upload_group_label.setStyleSheet(\"font-size: 16px; font-weight: bold; margin-top: 10px;\")\n",
+    "        main_layout.addWidget(upload_group_label)\n",
+    "        \n",
     "        self.drop_label = DragDropLabel(self)\n",
-    "        layout.addWidget(self.drop_label)\n",
+    "        main_layout.addWidget(self.drop_label)\n",
     "\n",
-    "        # 파일 선택 버튼\n",
     "        self.btn_select = QPushButton(\"컴퓨터에서 PDF 파일 선택\")\n",
     "        self.btn_select.clicked.connect(self.open_file_dialog)\n",
-    "        layout.addWidget(self.btn_select)\n",
+    "        main_layout.addWidget(self.btn_select)\n",
     "        \n",
-    "        # 상태 메시지 라벨\n",
     "        self.status_label = QLabel(\"상태: 대기 중\")\n",
     "        self.status_label.setAlignment(Qt.AlignmentFlag.AlignCenter)\n",
-    "        layout.addWidget(self.status_label)\n",
+    "        main_layout.addWidget(self.status_label)\n",
+    "        \n",
+    "        # --- 구분선 ---\n",
+    "        separator = QFrame()\n",
+    "        separator.setFrameShape(QFrame.Shape.HLine)\n",
+    "        separator.setFrameShadow(QFrame.Shadow.Sunken)\n",
+    "        main_layout.addWidget(separator)\n",
     "\n",
-    "        self.setLayout(layout)\n",
-    "        self.setWindowTitle(\"PyQt PDF Uploader\")\n",
-    "        self.setGeometry(300, 300, 400, 250)\n",
+    "        # --- 2. 질문/답변 섹션 ---\n",
+    "        qa_group_label = QLabel(\"2. 질문하기\")\n",
+    "        qa_group_label.setStyleSheet(\"font-size: 16px; font-weight: bold; margin-top: 10px;\")\n",
+    "        main_layout.addWidget(qa_group_label)\n",
+    "\n",
+    "        # 질문 입력 레이아웃\n",
+    "        question_layout = QHBoxLayout()\n",
+    "        self.question_input = QLineEdit()\n",
+    "        self.question_input.setPlaceholderText(\"업로드된 PDF에 대해 질문을 입력하세요...\")\n",
+    "        question_layout.addWidget(self.question_input)\n",
+    "\n",
+    "        self.btn_ask = QPushButton(\"질문하기\")\n",
+    "        self.btn_ask.clicked.connect(self.ask_question)\n",
+    "        question_layout.addWidget(self.btn_ask)\n",
+    "        main_layout.addLayout(question_layout)\n",
+    "\n",
+    "        # 답변 출력창\n",
+    "        answer_label = QLabel(\"답변:\")\n",
+    "        main_layout.addWidget(answer_label)\n",
+    "        \n",
+    "        self.answer_output = QTextEdit()\n",
+    "        self.answer_output.setReadOnly(True) # 답변은 수정할 수 없도록 설정\n",
+    "        self.answer_output.setStyleSheet(\"background-color: #f0f0f0;\")\n",
+    "        main_layout.addWidget(self.answer_output)\n",
+    "        \n",
+    "        # 초기에는 질문 섹션을 비활성화\n",
+    "        self.set_qa_section_enabled(False)\n",
+    "\n",
+    "        self.setLayout(main_layout)\n",
+    "        self.setWindowTitle(\"PDF 기반 RAG 질문 답변 시스템\")\n",
+    "        self.setGeometry(300, 300, 500, 600)\n",
+    "\n",
+    "    def set_qa_section_enabled(self, enabled):\n",
+    "        \"\"\"질문/답변 섹션의 활성화 상태를 설정합니다.\"\"\"\n",
+    "        self.question_input.setEnabled(enabled)\n",
+    "        self.btn_ask.setEnabled(enabled)\n",
+    "        self.answer_output.setEnabled(enabled)\n",
+    "        if not enabled:\n",
+    "            self.answer_output.setPlaceholderText(\"PDF 파일을 먼저 업로드해주세요.\")\n",
+    "        else:\n",
+    "            self.answer_output.setPlaceholderText(\"\")\n",
+    "\n",
     "\n",
     "    def open_file_dialog(self):\n",
-    "        # 파일 대화상자를 열어 PDF 파일 선택\n",
     "        file_path, _ = QFileDialog.getOpenFileName(self, \"PDF 파일 선택\", \"\", \"PDF Files (*.pdf)\")\n",
     "        if file_path:\n",
     "            self.upload_file(file_path)\n",
     "\n",
     "    def upload_file(self, file_path):\n",
-    "        self.status_label.setText(f\"상태: '{file_path.split('/')[-1]}' 업로드 중...\")\n",
-    "        \n",
+    "        filename = file_path.split('/')[-1]\n",
+    "        self.status_label.setText(f\"상태: '{filename}' 업로드 및 처리 중... (파일 크기에 따라 시간이 걸릴 수 있습니다)\")\n",
+    "        self.set_qa_section_enabled(False) # 처리 중 다시 비활성화\n",
+    "        QApplication.processEvents() # UI가 멈추지 않도록 이벤트 처리\n",
+    "\n",
     "        try:\n",
     "            with open(file_path, 'rb') as f:\n",
-    "                files = {'pdf_file': (file_path.split('/')[-1], f, 'application/pdf')}\n",
-    "                response = requests.post(self.server_url, files=files, timeout=10)\n",
+    "                files = {'file': (filename, f, 'application/pdf')}\n",
+    "                # RAG 처리는 오래 걸릴 수 있으므로 timeout을 넉넉하게 설정\n",
+    "                response = requests.post(self.upload_url, files=files, timeout=300)\n",
     "            \n",
-    "            # 응답 상태 확인\n",
-    "            if response.status_code == 200:\n",
-    "                response_data = response.json()\n",
-    "                self.status_label.setText(f\"상태: {response_data.get('message', '성공!')}\")\n",
-    "            else:\n",
-    "                response_data = response.json()\n",
-    "                self.status_label.setText(f\"상태: 서버 오류 - {response_data.get('error', '알 수 없는 오류')}\")\n",
+    "            response.raise_for_status()\n",
+    "            \n",
+    "            response_data = response.json()\n",
+    "            self.status_label.setText(f\"상태: {response_data.get('message', '업로드 및 처리 완료!')}\")\n",
+    "            self.set_qa_section_enabled(True) # 처리가 끝나면 질문 섹션 활성화\n",
     "\n",
     "        except requests.exceptions.RequestException as e:\n",
-    "            self.status_label.setText(f\"상태: 전송 오류 - {e}\")\n",
+    "            self.status_label.setText(f\"상태: 업로드 실패 - {e}\")\n",
     "        except Exception as e:\n",
     "            self.status_label.setText(f\"상태: 오류 발생 - {e}\")\n",
     "\n",
+    "    def ask_question(self):\n",
+    "        question = self.question_input.text().strip()\n",
+    "        if not question:\n",
+    "            self.answer_output.setText(\"질문을 입력해주세요.\")\n",
+    "            return\n",
+    "\n",
+    "        self.answer_output.setText(\"답변을 생성 중입니다...\")\n",
+    "        QApplication.processEvents()\n",
+    "\n",
+    "        try:\n",
+    "            payload = {\"question\": question}\n",
+    "            response = requests.post(self.ask_url, json=payload, timeout=60)\n",
+    "            response.raise_for_status()\n",
+    "\n",
+    "            response_data = response.json()\n",
+    "            self.answer_output.setText(response_data.get(\"answer\", \"답변을 가져올 수 없습니다.\"))\n",
+    "\n",
+    "        except requests.exceptions.RequestException as e:\n",
+    "            self.answer_output.setText(f\"오류: 서버와 통신할 수 없습니다.\\n{e}\")\n",
+    "        except Exception as e:\n",
+    "            self.answer_output.setText(f\"알 수 없는 오류가 발생했습니다.\\n{e}\")\n",
+    "\n",
+    "\n",
     "if __name__ == '__main__':\n",
-    "    # 필요한 라이브러리 설치 확인\n",
     "    try:\n",
     "        import requests\n",
     "    except ImportError:\n",
-    "        print(\"requests 라이브러리가 필요합니다. 'pip install requests' 명령어로 설치해주세요.\")\n",
+    "        print(\"requests 라이브러리가 필요합니다. 'pip install -r requirements.txt' 명령어로 설치해주세요.\")\n",
     "        sys.exit(1)\n",
     "        \n",
     "    app = QApplication(sys.argv)\n",
-    "    ex = PDFUploader()\n",
+    "    ex = RAGClientApp()\n",
     "    ex.show()\n",
-    "    sys.exit(app.exec())"
+    "    sys.exit(app.exec())\n",
+    "\n"
    ]
   },
   {
