--- a/deeplearning/RAG/rds.ipynb
+++ b/deeplearning/RAG/rds.ipynb
@@ -2,62 +2,135 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "adc48b24",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import mysql.connector\n",
-    "from mysql.connector import Error\n",
+    "# RAG 서비스를 위한 전체 테이블 생성 쿼리문\n",
+    "# 주석으로 각 컬럼의 역할과 제약조건에 대한 설명을 추가했습니다.\n",
     "\n",
-    "#RDS info\n",
-    "host = \"database-2.cxyce2ii8umg.ap-southeast-2.rds.amazonaws.com\" #mysql workbench에 연결할 때 썼던 그 aws엔드포인트입니다.\n",
-    "port = 3306 #포트번호는 손대지않으셨다면 3306 고정\n",
-    "username = \"minjae\" #rds 만드실 때 입력하셨던 이름\n",
-    "database = \"rag\" #RDS DB내에서 연결하고싶은 데이터베이스 이름입니다.\n",
-    "#workbench연결만 하신분들은 workbench에 들어가서 연결해둔 aws rds에 접속하여 CREATE DATABASE name 하시면 생성됩니다.\n",
-    "password = \"lovepool03\"\n",
+    "# 1. Users - 사용자 정보 테이블\n",
+    "users_table_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS Users (\n",
+    "    user_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    -- 사용자를 식별하는 고유 번호 (기본 키)\n",
     "\n",
+    "    email VARCHAR(255) NOT NULL UNIQUE,\n",
+    "    -- 로그인에 사용할 이메일 (반드시 필요, 중복 불가)\n",
     "\n",
-    "db_config = {\n",
-    "    'host': host,\n",
-    "    'user': username,\n",
-    "    'password': password,\n",
-    "    'database': database,\n",
-    "    'port': port\n",
-    "}"
+    "    password_hash VARCHAR(255) NOT NULL,\n",
+    "    -- 비밀번호 원문을 암호화하여 저장\n",
+    "\n",
+    "    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
+    "    -- 사용자 가입일\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "# 2. Documents - 업로드된 문서 정보 테이블\n",
+    "documents_table_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS Documents (\n",
+    "    document_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    -- 각 문서를 식별하는 고유 번호\n",
+    "\n",
+    "    user_id INT NOT NULL,\n",
+    "    -- 이 문서를 업로드한 사용자의 ID\n",
+    "\n",
+    "    file_name VARCHAR(255) NOT NULL,\n",
+    "    -- 업로드된 원본 파일 이름 (예: \"my_paper.pdf\")\n",
+    "\n",
+    "    file_path VARCHAR(512) NOT NULL UNIQUE,\n",
+    "    -- 파일이 실제 저장된 경로 (예: S3 경로). 중복될 수 없음\n",
+    "\n",
+    "    status ENUM('업로드중', '처리중', '완료', '실패') NOT NULL DEFAULT '업로드중',\n",
+    "    -- 문서의 현재 처리 상태\n",
+    "\n",
+    "    uploaded_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
+    "    -- 문서 업로드 시점\n",
+    "\n",
+    "    -- 외래 키 설정: user_id는 Users 테이블의 user_id를 참조\n",
+    "    -- ON DELETE CASCADE: 만약 Users 테이블에서 사용자가 삭제되면, 관련된 문서도 함께 삭제됨\n",
+    "    FOREIGN KEY (user_id) REFERENCES Users(user_id) ON DELETE CASCADE\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "# 3. Sessions - 대화 세션 정보 테이블\n",
+    "sessions_table_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS Sessions (\n",
+    "    session_id VARCHAR(36) PRIMARY KEY,\n",
+    "    -- 각 대화 세션을 식별하는 고유 ID (UUID 사용 권장)\n",
+    "\n",
+    "    user_id INT NOT NULL,\n",
+    "    -- 이 세션을 소유한 사용자의 ID\n",
+    "\n",
+    "    document_id INT NULL,\n",
+    "    -- 이 대화가 특정 문서를 기반으로 할 경우 해당 문서 ID (필수 아님)\n",
+    "\n",
+    "    session_title VARCHAR(255) NOT NULL,\n",
+    "    -- 대화방 제목\n",
+    "\n",
+    "    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
+    "    -- 세션 생성 시점\n",
+    "\n",
+    "    updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,\n",
+    "    -- 마지막 대화가 오고 간 시점 (자동 업데이트)\n",
+    "\n",
+    "    -- 외래 키 설정\n",
+    "    FOREIGN KEY (user_id) REFERENCES Users(user_id) ON DELETE CASCADE,\n",
+    "    -- ON DELETE SET NULL: 참조하던 문서가 삭제되어도 대화 세션 기록은 남기고, document_id만 NULL로 변경\n",
+    "    FOREIGN KEY (document_id) REFERENCES Documents(document_id) ON DELETE SET NULL\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "# 4. Document_Chunks - 전처리된 문서 조각 테이블\n",
+    "document_chunks_table_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS Document_Chunks (\n",
+    "    chunk_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    -- 각 문서 조각의 고유 번호\n",
+    "\n",
+    "    document_id INT NOT NULL,\n",
+    "    -- 이 조각이 어느 원본 문서에서 왔는지 식별\n",
+    "\n",
+    "    vector_id VARCHAR(255) NOT NULL UNIQUE,\n",
+    "    -- 벡터 DB(예: Pinecone, Milvus)에 저장된 벡터를 가리키는 고유 ID\n",
+    "\n",
+    "    -- 검색 성능 향상을 위해 vector_id에 인덱스 추가\n",
+    "    INDEX (vector_id),\n",
+    "    \n",
+    "    -- 외래 키 설정: 참조하던 문서가 삭제되면, 관련된 모든 조각도 함께 삭제\n",
+    "    FOREIGN KEY (document_id) REFERENCES Documents(document_id) ON DELETE CASCADE\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "# 5. QnA_Logs - 질의응답 기록 테이블\n",
+    "qna_logs_table_query = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS QnA_Logs (\n",
+    "    qna_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    -- 각 질의응답 쌍의 고유 번호\n",
+    "\n",
+    "    session_id VARCHAR(36) NOT NULL,\n",
+    "    -- 이 질의응답이 어느 세션에 속하는지 식별\n",
+    "\n",
+    "    user_question TEXT NOT NULL,\n",
+    "    -- 사용자가 입력한 질문 원문\n",
+    "\n",
+    "    model_answer MEDIUMTEXT NOT NULL,\n",
+    "    -- 언어 모델이 생성한 답변 내용 (길 수 있으므로 MEDIUMTEXT 사용)\n",
+    "\n",
+    "    feedback TINYINT,\n",
+    "    -- 답변에 대한 사용자 피드백 (예: 1=좋아요, -1=싫어요)\n",
+    "\n",
+    "    timestamp TIMESTAMP DEFAULT CURRENT_TIMESTAMP,\n",
+    "    -- 질의응답이 발생한 시점\n",
+    "\n",
+    "    -- 외래 키 설정: 참조하던 세션이 삭제되면, 관련된 모든 질의응답 기록도 함께 삭제\n",
+    "    FOREIGN KEY (session_id) REFERENCES Sessions(session_id) ON DELETE CASCADE\n",
+    ");\n",
+    "\"\"\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dd0f6f3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "테이블이 성공적으로 삭제되었습니다.\n",
-      "\n",
-      "연결이 종료되었습니다.\n"
-     ]
-    }
-   ],
-   "source": [
-    "table_query = \"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS sample (\n",
-    "        id INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "        name VARCHAR(255) NOT NULL,\n",
-    "        price DECIMAL(10, 2) NOT NULL,\n",
-    "        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
-    "    )\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "086791e1",
    "metadata": {},
    "outputs": [
@@ -65,23 +138,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "생성된 쿼리: INSERT INTO products (`name`, `price`) VALUES (%s, %s)\n",
+      "'users_table_query' 테이블이 성공적으로 삭제되었습니다.\n",
       "\n",
-      "'products' 테이블에 데이터가 성공적으로 삽입되었습니다.\n",
-      "삽입된 행의 ID (Auto_Increment): 2\n",
+      "연결이 종료되었습니다.\n",
+      "'documents_table_query' 테이블이 성공적으로 삭제되었습니다.\n",
+      "\n",
+      "연결이 종료되었습니다.\n",
+      "'sessions_table_query' 테이블이 성공적으로 삭제되었습니다.\n",
+      "\n",
+      "연결이 종료되었습니다.\n",
+      "'document_chunks_table_query' 테이블이 성공적으로 삭제되었습니다.\n",
+      "\n",
+      "연결이 종료되었습니다.\n",
+      "'qna_logs_table_query' 테이블이 성공적으로 삭제되었습니다.\n",
       "\n",
       "연결이 종료되었습니다.\n",
       "\n",
-      "--- 'products' 테이블 데이터 ---\n",
-      "id: 1\n",
-      "name: 노트북\n",
-      "price: 12000000.00\n",
-      "created_at: 2025-06-24 10:48:56\n",
-      "id: 2\n",
-      "name: 테이블\n",
-      "price: 300000.00\n",
-      "created_at: 2025-06-24 16:09:46\n",
-      "---------------------------------\n",
+      "[테이블 목록]\n",
+      "- Document_Chunks\n",
+      "- Documents\n",
+      "- QnA_Logs\n",
+      "- Sessions\n",
+      "- Users\n",
       "\n",
       "연결이 종료되었습니다.\n"
      ]
@@ -91,26 +169,12 @@
     "from rds import DatabaseManager\n",
     "\n",
     "dm = DatabaseManager()\n",
+    "# dm.create_table(\"CREATE DATABASE rag\")\n",
     "\n",
     "\n",
-    "table_query = \"\"\"\n",
-    "    CREATE TABLE IF NOT EXISTS sample (\n",
-    "        id INT AUTO_INCREMENT PRIMARY KEY,\n",
-    "        name VARCHAR(255) NOT NULL,\n",
-    "        price DECIMAL(10, 2) NOT NULL,\n",
-    "        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP\n",
-    "    )\n",
-    "\"\"\"\n",
-    "# dm.create_table(table_query)\n",
-    "# dm.check_tables_in_db()\n",
+    "dm.check_tables_in_db()\n",
     "\n",
-    "data = {\n",
-    "    'name': \"테이블\",\n",
-    "    'price': 300000\n",
-    "}\n",
-    "\n",
-    "dm.insert_data(\"products\", data)\n",
-    "dm.check_table_data(\"products\")\n"
+    "\n"
    ]
   },
   {
