Refactor DB manager, remove rds.py, update usage

--- a/deeplearning/RAG/program.ipynb
+++ b/deeplearning/RAG/program.ipynb
@@ -844,14 +844,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "db5faf4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19521390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from database_manager import DatabaseManager\n",
+    "\n",
+    "dm = DatabaseManager()\n",
+    "\n",
+    "\n",
+    "dm.check_tables_in_db()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "ce3769b0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-06-14 22:03:20.273 python[64743:7789898] The class 'NSOpenPanel' overrides the method identifier.  This method is implemented by class 'NSWindow'\n"
+      "드롭된 파일: C:/Users/minja/Downloads/manual (1).pdf\n"
      ]
     },
     {
@@ -860,14 +885,14 @@
      "output_type": "error",
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
+      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/miniconda3/envs/rag/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3534: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "c:\\Users\\minja\\anaconda3\\envs\\rag\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3513: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
