--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
    "execution_count": 132,
-=======
-   "execution_count": 2,
->>>>>>> Stashed changes
    "metadata": {},
    "outputs": [
     {
@@ -70,14 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0, 6, 0, 10, 23, 32], [0, 6, 0, 10, 23, 32, 40], [0, 0, 10, 23, 32, 40, 41]]\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m wines \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m*\u001b[39m n\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n):\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -106,210 +106,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# target = 7\n",
-    "# trees = [20, 15, 10, 17]\n",
-    "\n",
-    "mans = [3, 1, 4, 3, 2]\n",
-    "mans.sort()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "4\n",
-      "3\n",
-      "0\n"
+      "어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\n",
+      "\"재귀함수가 뭔가요?\"\n",
+      "\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\n",
+      "마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\n",
+      "그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\"\n",
+      "____\"재귀함수가 뭔가요?\"\n",
+      "____\"재귀함수는 자기 자신을 호출하는 함수라네\"\n",
+      "____라고 답변하였지.\n",
+      "라고 답변하였지.\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "from collections import defaultdict, deque\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "n, m, start = map(int, input().split())\n",
-    "\n",
-    "dist = defaultdict(list)\n",
-    "\n",
-    "for _ in range(m):\n",
-    "    u, v = map(int, input().split())\n",
-    "    dist[u].append(v)\n",
-    "    dist[v].append(u)\n",
-    "for i in range(1, n+1):\n",
-    "    dist[i].sort()\n",
-    "\n",
-    "visited = [0] * (n+1)\n",
-    "order = 1\n",
-    "\n",
-    "def dfs(start):\n",
-    "    global order\n",
-    "    stack = [start]\n",
-    "\n",
-    "    while stack:\n",
-    "        node = stack.pop()\n",
-    "        if visited[node] != 0:\n",
-    "            continue\n",
-    "        visited[node] = order\n",
-    "        order += 1\n",
-    "        for neighbor in reversed(dist[node]):\n",
-    "            if visited[neighbor] == 0:\n",
-    "                stack.append(neighbor)\n",
-    "\n",
-    "dfs(start)\n",
-    "\n",
-    "for i in range(1, n+1):\n",
-    "    print(visited[i])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import heapq\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "v, e = map(int, input().split())\n",
-    "k = int(input())\n",
-    "\n",
-    "graph = [[] for _ in range(v+1)]\n",
-    "for _ in range(e):\n",
-    "    start, end, weight = map(int, input().split())\n",
-    "    graph[start].append((end, weight))\n",
-    "\n",
-    "def dijkstra(graph, start, num_nodes):\n",
-    "    dist = {node: float('inf') for node in range(1, num_nodes+1)}\n",
-    "    dist[start] = 0\n",
-    "\n",
-    "    pq = [(0, start)]\n",
+    "def answer(n, count):\n",
+    "    print(f\"{'____'*count}\\\"재귀함수가 뭔가요?\\\"\")\n",
+    "    if n > 0:\n",
+    "        print(f\"{'____'*count}\\\"잘 들어보게. 옛날옛날 한 산 꼭대기에 이세상 모든 지식을 통달한 선인이 있었어.\\n{'____'*count}마을 사람들은 모두 그 선인에게 수많은 질문을 했고, 모두 지혜롭게 대답해 주었지.\\n{'____'*count}그의 답은 대부분 옳았다고 하네. 그런데 어느 날, 그 선인에게 한 선비가 찾아와서 물었어.\\\"\")\n",
+    "        answer(n-1, count + 1)\n",
+    "    else:  \n",
+    "        print(f\"{'____'*count}\\\"재귀함수는 자기 자신을 호출하는 함수라네\\\"\")\n",
+    "        print(f\"{'____'*count}라고 답변하였지.\")\n",
+    "        return\n",
+    "    print(f\"{'____'*count}라고 답변하였지.\")\n",
     "    \n",
-    "    while pq:\n",
-    "        cur_d, u = heapq.heappop(pq)\n",
-    "        if cur_d > dist[u]:\n",
-    "            continue\n",
-    "        for v, weight in graph[u]:\n",
-    "            new_d = cur_d + weight\n",
-    "            if new_d < dist[v]:\n",
-    "                dist[v] = new_d\n",
-    "                heapq.heappush(pq, (new_d, v))\n",
-    "\n",
-    "    return dist\n",
-    "\n",
-    "shortest_paths = dijkstra(graph, k, v)\n",
-    "\n",
-    "for node in range(1, v+1):\n",
-    "    distance = shortest_paths[node]\n",
-    "    print(distance if distance < float('inf') else \"INF\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0], [10, 0], [20, 30], [25, 35], [55, 50], [45, 65], [75, 65]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "v, e = map(int, input().split())\n",
-    "\n",
-    "edges = []\n",
-    "\n",
-    "INF = float('inf')\n",
-    "dist = [INF] * (v + 1)\n",
-    "\n",
-    "for _ in range(e):\n",
-    "    start, end, cost = map(int, input().split())\n",
-    "    edges.append((start, end, cost))\n",
-    "    \n",
-    "def bellmanford(start):\n",
-    "    dist[start] = 0\n",
-    "    \n",
-    "    for i in range(v):\n",
-    "        for j in range(e):\n",
-    "            cur_node, next_node, cost = edges[j]\n",
-    "            \n",
-    "            # 갈 수 있는 경로가 존재하고 현재까지 온 경로 비용 + 가야할 비용이 더 작다면\n",
-    "            if dist[cur_node] != INF and dist[cur_node] + cost < dist[next_node]:\n",
-    "                dist[next_node] = dist[cur_node] + cost\n",
-    "                \n",
-    "                # 계속 갱신된다면 음의 사이클 존재\n",
-    "                if i == v-1:\n",
-    "                    return False\n",
-    "                \n",
-    "    return True\n",
-    "\n",
-    "if bellmanford(1):\n",
-    "    for i in range(2, v+1):\n",
-    "        if dist[i] == INF:\n",
-    "            print(-1)\n",
-    "        else:\n",
-    "            print(dist[i])\n",
-    "else:\n",
-    "    print(-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
     "n = int(input())\n",
-    "m = int(input())\n",
-    "\n",
-    "INF = float('inf')\n",
-    "dist = [[INF] * n for _ in range(n)]\n",
-    "for i in range(n):\n",
-    "    dist[i][i] = 0\n",
-    "\n",
-    "for _ in range(m):\n",
-    "    start, end, weight = map(int, input().split())\n",
-    "    if weight < dist[start - 1][end - 1]:\n",
-    "        dist[start - 1][end - 1] = weight\n",
-    "\n",
-    "# Floyd-Warshall\n",
-    "for k in range(n):\n",
-    "    for i in range(n):\n",
-    "        for j in range(n):\n",
-    "            dist[i][j] = min(dist[i][j], dist[i][k] + dist[k][j])\n",
-    "\n",
-    "for i in range(n):\n",
-    "    for j in range(n):\n",
-    "        if dist[i][j] == INF:\n",
-    "            print(0, end=' ')\n",
-    "        else:\n",
-    "            print(dist[i][j], end=' ')\n",
-    "    print()\n"
+    "print(\"어느 한 컴퓨터공학과 학생이 유명한 교수님을 찾아가 물었다.\")\n",
+    "answer(n, 0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -328,7 +166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
