--- a/deeplearning/RAG/pyqt6_test.ipynb
+++ b/deeplearning/RAG/pyqt6_test.ipynb
@@ -379,11 +379,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_23016\\876219203.py:126: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_20592\\1394793849.py:126: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
       "  super().__init__()\n",
-      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_23016\\876219203.py:15: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_20592\\1394793849.py:15: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
       "  super().__init__(parent)\n",
-      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_23016\\876219203.py:67: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
+      "C:\\Users\\minja\\AppData\\Local\\Temp\\ipykernel_20592\\1394793849.py:67: DeprecationWarning: sipPyTypeDict() is deprecated, the extension module should use sipPyTypeDictRef() instead\n",
       "  super().__init__(parent)\n"
      ]
     },
@@ -532,6 +532,7 @@
     "class RAGClientApp(QMainWindow):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
+    "        # self.server_url = \"http://175.125.143.96:5000\"\n",
     "        self.server_url = \"http://127.0.0.1:5000\"\n",
     "        self.user_id = None\n",
     "        self.current_session_id = None\n",
