--- a/deeplearning/RAG/my_RAG copy 2.ipynb
+++ b/deeplearning/RAG/my_RAG copy 2.ipynb
@@ -57,14 +57,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dbbc7195",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input_pdf = \"datasets/manual.pdf\"\n",
+    "input_pdf = \"datasets/manual.pdf\"\n",
     "\n",
-    "input_pdf = \"datasets/여비산정기준표.pdf\"\n",
+    "# input_pdf = \"datasets/여비산정기준표.pdf\"\n",
     "preprocessed_file = \"datasets/ocr_output.pdf\"\n",
     "result_file = \"datasets/ocr_output_result.pdf\","
    ]
